Changes for nazghul-0.1.2

--Fixed the bug Sam reported about firing cannons in town. Whenever the cannon
  was fired the turns were updates as if the party was in the wilderness, not
  town. So about 64 turns passed, and if any hostiles happened to be nearby you
  would immediately enter combat. Also spruced up the messages shown when
  firing and fixed the cannonball sprite (finally :-)) in the examples.

--Fixed bugs related to playing a sound when damage is inflicted. Previously it
  was a hardcoded hack that broke a while back when we split the data files
  into their own directory. The fix was to add an optional 'damage_sound' field
  to both the SPECIES and CHAR declarations. When a character receives damage
  it will first check if it has its own special damage sound to play, otherwise
  it will check if its species has a damage sound to play, otherwise it doesn't
  play anything. This works in the case of damaging npc parties, too (for
  example with ship cannons) because npc party damage calls the character
  damage routines. In the examples I modified all species to play the old
  traditional damage sound.
--Added sound attenuation with distance (hearing the nixies splash around gets
  really annoying when you can't get away from it - need to find some better
  sounds). I only made it apply in party mode because in combat mode it's a bit
  trickier for the code that's playing the sound to figure out which party
  member it needs to calculate the distance from. Since dungeons are not party
  mode I'll probably want to reconsider how to do that.
